--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "element-ui": "^2.14.1",
+    "quill": "^1.3.7",
+    "save": "^2.4.0",
     "vue": "^2.5.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.24.1",
     "vuex": "^3.6.0"
