--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "element-ui": "^2.14.1",
+    "jquery": "^3.5.1",
     "quill": "^1.3.7",
     "save": "^2.4.0",
     "vue": "^2.5.2",
